updated 09finaldata with viewing space calculations and correlations

--- a/05viewingspace.Rmd
+++ b/05viewingspace.Rmd
@@ -76,6 +76,8 @@ rawdata <- rawdata %>%
   group_by(participant,media) %>%
   slice(30:n())
 
+write_csv(rawdata,"adultviewingspaceraw.csv")
+
 means <- rawdata %>%
   group_by(participant,media) %>%
   dplyr::summarize(x = mean(x,na.rm=TRUE),
