--- a/09finaldata.Rmd
+++ b/09finaldata.Rmd
@@ -1116,12 +1116,12 @@ ezANOVA(
 
 Next we're going to correlate our eye gaze metrics (Eye, Mouth, Neck, and FaceChest) with lexical recall and gist. Okay! But remember we have a slightly smaller dataset here because we've excluded some participants for having bad eye data (but they had valid behavioral data so we kept them in the AoA-Performance correlations above). 
 
-**We also removed gist_forward column.**
+**IMPORTANT: We also removed gist_forward column.**
 
 ```{r repackage data for correlations again}
 eyeperf <- fulldata %>%
   filter(eye_exclude == FALSE) %>%
-  select(participant, maingroup, hearing, direction, aoasl, signyrs, acc, gist, eyes, mouth, neck, facechest) %>%
+  select(participant, maingroup, hearing, direction, aoasl, signyrs, selfrate, acc, gist, eyes, mouth, neck, facechest) %>%
   group_by(maingroup, participant, direction) %>%
   mutate(gist = mean(gist, na.rm = TRUE),
          lex = mean(acc, na.rm = TRUE),
@@ -1130,20 +1130,57 @@ eyeperf <- fulldata %>%
          neck = mean(neck, na.rm = TRUE),
          facechest = mean(facechest, na.rm = TRUE)) %>%
   ungroup() %>%
-  select(maingroup, participant, hearing, direction, aoasl, signyrs, gist, lex, eyes, mouth, neck, facechest) %>%
+  select(maingroup, participant, hearing, direction, aoasl, signyrs, selfrate, gist, lex, eyes, mouth, neck, facechest) %>%
   distinct() %>%
   gather(metric, value, gist:facechest) %>%
   unite(metricvalue, c(metric, direction), sep = "_") %>%
   spread(metricvalue, value) %>%
   select(-participant, -maingroup) %>%
-  select(hearing, aoasl, signyrs, gist_reversed, lex_forward, lex_reversed, eyes_forward, eyes_reversed,
-         mouth_forward, mouth_reversed, neck_forward, neck_reversed, facechest_forward, facechest_reversed)
+  select(hearing, aoasl, signyrs, selfrate, gist_reversed, lex_forward, lex_reversed, eyes_forward,
+         eyes_reversed, mouth_forward, mouth_reversed, neck_forward, neck_reversed, 
+         facechest_forward, facechest_reversed)
 
 eyeperf_deaf <- eyeperf %>% filter(hearing == "Deaf") %>% select(-hearing)
+eyeperf_deaf_fw <- eyeperf_deaf %>% select(aoasl, signyrs, selfrate, lex_forward, eyes_forward,
+                                           mouth_forward, neck_forward, facechest_forward)
+eyeperf_deaf_rv <- eyeperf_deaf %>% select(aoasl, signyrs, selfrate, gist_reversed, lex_reversed,
+                                           eyes_reversed, mouth_reversed, neck_reversed, facechest_reversed)
 eyeperf_hearing <- eyeperf %>% filter(hearing == "Hearing") %>% select(-hearing)
+eyeperf_hearing_fw <- eyeperf_hearing %>% select(aoasl, signyrs, selfrate, lex_forward, eyes_forward,
+                                           mouth_forward, neck_forward, facechest_forward)
+eyeperf_hearing_rv <- eyeperf_hearing %>% select(aoasl, signyrs, selfrate, gist_reversed, lex_reversed,
+                                           eyes_reversed, mouth_reversed, neck_reversed, facechest_reversed)
 eyeperf_all <- eyeperf %>% select(-hearing)
+eyeperf_all_fw <- eyeperf_all %>% select(aoasl, signyrs, selfrate, lex_forward, eyes_forward,
+                                           mouth_forward, neck_forward, facechest_forward)
+eyeperf_all_rv <- eyeperf_all %>% select(aoasl, signyrs, selfrate, gist_reversed, lex_reversed,
+                                           eyes_reversed, mouth_reversed, neck_reversed, facechest_reversed)
 
-
+```
+## Deaf Correlations, Forward
+```{r rows.print = 15}
+# Correlations for Deaf
+print("DEAF Correlations - Pearson's r")
+#corstarsl(lexgist_deaf)
+Hmisc::rcorr(as.matrix(eyeperf_deaf_fw))$r
+print("DEAF Correlations - P-values")
+Hmisc::rcorr(as.matrix(eyeperf_deaf_fw))$P
+cat(paste("","\n",""))
+corstarsl(eyeperf_deaf_fw)
+```
+## Deaf Correlations, Reversed
+```{r rows.print = 15}
+# Correlations for Deaf
+print("DEAF Correlations - Pearson's r")
+#corstarsl(lexgist_deaf)
+Hmisc::rcorr(as.matrix(eyeperf_deaf_rv))$r
+print("DEAF Correlations - P-values")
+Hmisc::rcorr(as.matrix(eyeperf_deaf_rv))$P
+cat(paste("","\n",""))
+corstarsl(eyeperf_deaf_rv)
+```
+## Deaf Correlations, Both Directions
+```{r rows.print = 15}
 # Correlations for Deaf
 print("DEAF Correlations - Pearson's r")
 #corstarsl(lexgist_deaf)
@@ -1151,7 +1188,35 @@ Hmisc::rcorr(as.matrix(eyeperf_deaf))$r
 print("DEAF Correlations - P-values")
 Hmisc::rcorr(as.matrix(eyeperf_deaf))$P
 cat(paste("","\n",""))
+corstarsl(eyeperf_deaf)
+```
 
+## Hearing Correlations, Forward
+```{r rows.print = 15}
+# Correlations for Hearing
+print("HEARING Correlations - Pearson's r")
+#corstarsl(lexgist_hearing)
+Hmisc::rcorr(as.matrix(eyeperf_hearing_fw))$r
+print("HEARING Correlations - P-values")
+Hmisc::rcorr(as.matrix(eyeperf_hearing_fw))$P
+cat(paste("","\n",""))
+corstarsl(eyeperf_hearing_fw)
+```
+
+## Hearing Correlations, Reversed
+```{r rows.print = 15}
+# Correlations for Hearing
+print("HEARING Correlations - Pearson's r")
+#corstarsl(lexgist_hearing)
+Hmisc::rcorr(as.matrix(eyeperf_hearing_rv))$r
+print("HEARING Correlations - P-values")
+Hmisc::rcorr(as.matrix(eyeperf_hearing_rv))$P
+cat(paste("","\n",""))
+corstarsl(eyeperf_hearing_rv)
+```
+
+## Hearing Correlations, Both Directions
+```{r rows.print = 15}
 # Correlations for Hearing
 print("HEARING Correlations - Pearson's r")
 #corstarsl(lexgist_hearing)
@@ -1159,30 +1224,15 @@ Hmisc::rcorr(as.matrix(eyeperf_hearing))$r
 print("HEARING Correlations - P-values")
 Hmisc::rcorr(as.matrix(eyeperf_hearing))$P
 cat(paste("","\n",""))
-
-# Correlations for All
-print("ALL Correlations - Pearson's r")
-#corstarsl(lexgist_all)
-Hmisc::rcorr(as.matrix(eyeperf_all))$r
-print("ALL Correlations - P-values")
-Hmisc::rcorr(as.matrix(eyeperf_all))$P
-
-```
-
-I'm also including nicely formatted tables with *** indicators of significance for quick referencing. Order: Deaf, Hearing, All. 
-
-```{r pretty correlations for eyeperf, rows.print = 15}
-corstarsl(eyeperf_deaf)
 corstarsl(eyeperf_hearing)
-corstarsl(eyeperf_all)
 ```
 
-I'm going to redo the ALL-participants correlations but for forward and reversed seprately. 
-```{r  correlations for eyeperffwrv}
+## All People Correlations, Forward
+```{r correlations for eyeperffwrv, rows.print=15}
 
 eyeperf_fwrv <- fulldata %>%
   filter(eye_exclude == FALSE) %>%
-  select(participant, maingroup, hearing, direction, aoasl, signyrs, acc, gist, eyes, mouth, neck, facechest) %>%
+  select(participant, maingroup, hearing, direction, aoasl, signyrs, selfrate, acc, gist, eyes, mouth, neck, facechest) %>%
   group_by(maingroup, participant, direction) %>%
   mutate(gist = mean(gist, na.rm = TRUE),
          lex = mean(acc, na.rm = TRUE),
@@ -1191,14 +1241,14 @@ eyeperf_fwrv <- fulldata %>%
          neck = mean(neck, na.rm = TRUE),
          facechest = mean(facechest, na.rm = TRUE)) %>%
   ungroup() %>%
-  select(maingroup, participant, hearing, direction, aoasl, signyrs, gist, lex, eyes, mouth, neck, facechest) %>%
+  select(maingroup, participant, hearing, direction, aoasl, signyrs, selfrate, gist, lex, eyes, mouth, neck, facechest) %>%
   distinct() %>%
   gather(metric, value, gist:facechest) %>%
   unite(metricvalue, c(metric, direction), sep = "_", remove = FALSE) %>%
   select(-metric) %>%
   spread(metricvalue, value) %>%
   select(-participant, -maingroup, -hearing) %>%
-  select(direction, aoasl, signyrs, gist_reversed, lex_forward, lex_reversed, eyes_forward, eyes_reversed,
+  select(direction, aoasl, signyrs, selfrate, gist_reversed, lex_forward, lex_reversed, eyes_forward, eyes_reversed,
          mouth_forward, mouth_reversed, neck_forward, neck_reversed, facechest_forward, facechest_reversed)
 
 eyeperf_fw <- eyeperf_fwrv %>% filter(direction == "forward") %>% 
@@ -1212,7 +1262,11 @@ Hmisc::rcorr(as.matrix(eyeperf_fw))$r
 print("FW Correlations - P-values")
 Hmisc::rcorr(as.matrix(eyeperf_fw))$P
 cat(paste("","\n",""))
+corstarsl(eyeperf_fw)
+```
 
+## All People Correlations, Reversed
+```{r correlations for eyeperfrv, rows.print=15}
 # Correlations for RV
 print("RV Correlations - Pearson's r")
 #corstarsl(lexgist_hearing)
@@ -1220,15 +1274,21 @@ Hmisc::rcorr(as.matrix(eyeperf_rv))$r
 print("RV Correlations - P-values")
 Hmisc::rcorr(as.matrix(eyeperf_rv))$P
 cat(paste("","\n",""))
-```
-
-I'm also including nicely formatted tables with *** indicators of significance for quick referencing, forward v. reversed.
-
-```{r pretty correlations for eyeperffwrv, rows.print = 15}
-corstarsl(eyeperf_fw)
 corstarsl(eyeperf_rv)
 ```
 
+## All People Correlations, Both Directions
+```{r rows.print = 15}
+# Correlations for All
+print("ALL Correlations - Pearson's r")
+#corstarsl(lexgist_all)
+Hmisc::rcorr(as.matrix(eyeperf_all))$r
+print("ALL Correlations - P-values")
+Hmisc::rcorr(as.matrix(eyeperf_all))$P
+corstarsl(eyeperf_all)
+```
+
+## Correlation Table
 And the correlation table.
 
 ```{r eyeperf correlation charts, fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
